# AgentGate

./: .gitignore  07-ai-autonomous-development-risk-control-design.md  08-three-repository-gate-adaptation-design.md  09-agentgate-legacy-gitlab-github-auto-merge-design.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  USER_GUIDE.md  governance.config.yml  install.sh  mr-spec.md  pyproject.toml  risk-types.md
.github/: CODEOWNERS
.github/workflows/: governance.yml
agent-instructions/: AGENTS.md  CLAUDE.md  copilot-instructions.md  cursor-rules.mdc  hermes-instructions.md
ci/: governance-ci.yml
docs/: 00-overview.md  01-gitlab-admin-setup.md  02-repo-onboarding.md  03-developer-terminal-setup.md  04-ai-agent-workflow.md  05-ci-reference.md  06-newcomer-guide.md  postmortem-diff-base-2026-07-01.md
patterns/: csharp.yml  dart.yml  go.yml  java.yml  javascript.yml  python.yml
profiles/: flutter-mobile.yml
scripts/: check_tested.py  collect_ai_usage.py  create_mr.py  enable-local.sh  evidence_bundle.py  gate_decision.py  gitlab_controller.py  install-hooks.sh  record_test_run.py  report_expired.py  risk_merge_decision.py  run_affected_tests.py  scan_risks.py  selftest.sh  validate_mr.py
templates/: merge_request_default.md
tests/: test_ci_platform_compat.py  test_regressions.py
