[project]
name = "agentgate"
version = "1.2.1"
description = "Diff-scoped governance gates for AI-assisted development"
requires-python = ">=3.10"
dependencies = ["PyYAML==6.0.3"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*"]
